--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Three in One: Платежы</title>
+    <title>Three in One: Платежи</title>
     <meta name="description"
           content="Тройное проникновение - лучший лохотрон! Отжимаем с Payeer, AdvCash, Яндекс.Деньги">
     <meta property="og:description"
@@ -19,7 +19,7 @@
 </head>
 <body>
 <article class="container">
-    <h1>Three in One: Платежы</h1>
+    <h1>Three in One: Платежи</h1>
     <p>Публично доступная информация о платежах всех пользователей системы
         <a href="https://www.threeinone.club/">threeinone.club</a>
     </p>
