--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
         <a href="https://www.threeinone.club/">threeinone.club</a>
     </p>
     <ul>
-        <li><a href="https://grabify.link/threeinone.php?victim=2BZ6WH">Пополнения</a> (138875 операций)</li>
-        <li><a href="https://grabify.link/threeinone.php?victim=0H98IY">Выплаты</a> (807540 операций)</li>
+        <li>
+            <a href="https://grabify.link/threeinone.php?victim=2BZ6WH">Пополнения</a>
+            <i>(138875 операций)</i>
+        </li>
+        <li>
+            <a href="https://grabify.link/threeinone.php?victim=0H98IY">Выплаты</a>
+            <i>(807540 операций)</i>
+        </li>
     </ul>
 </article>
 </body>
